# rotax-dyno

./: .gitignore  config.toml  pyproject.toml
.kiro/specs/rotax-dyno-daq/: .config.kiro  design.md  requirements.md  tasks.md
src/rotax_dyno_daq/: __init__.py  __main__.py  app.py
src/rotax_dyno_daq.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/rotax_dyno_daq/acquisition/: __init__.py  analog_voltage_reader.py  hat_reader.py  rpm_counter.py  serial_afr_reader.py
src/rotax_dyno_daq/alarms/: __init__.py  manager.py
src/rotax_dyno_daq/calibration/: __init__.py  engine.py  rate_config.py
src/rotax_dyno_daq/config/: __init__.py  manager.py
src/rotax_dyno_daq/core/: __init__.py  data_bus.py  display_smoother.py  enums.py  models.py
src/rotax_dyno_daq/dashboard/: __init__.py  alarm_config_panel.py  alarm_widget.py  calibration_panel.py  engine_overlay.py  hardware_setup_panel.py  main_window.py  run_panel.py  (+2 more)
tests/: conftest.py
tests/unit/: test_alarm_config_panel.py  test_alarm_manager.py  test_alarm_widget.py  test_analog_voltage_reader.py  test_calibration_engine.py  test_calibration_panel.py  test_cloud_uploader.py  test_config_manager.py  test_core_models.py  test_csv_logger.py  test_dashboard_main_window.py  test_data_bus.py  test_engine_overlay.py  test_hardware_setup_panel.py  test_hat_reader.py  test_post_processing_panel.py  test_post_processor.py  test_rate_config.py  test_run_manager.py  test_run_panel.py  test_strip_chart.py  test_web_frontend.py  test_web_server.py  test_web_server_websocket.py  test_websocket_live.py
(+9 files in other folders)
