[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rotax-dyno-daq"
version = "0.1.0"
description = "Data acquisition system for Rotax 912 ULS engine dynamometer monitoring"
requires-python = ">=3.11"
dependencies = [
    "daqhats",
    "PyQt6",
    "pyqtgraph",
    "fastapi",
    "uvicorn",
    "websockets",
    "boto3",
    "numpy",
    "scipy",
    "tomli-w",
    "pyserial",
]

[project.optional-dependencies]
dev = [
    "hypothesis",
    "pytest",
    "pytest-qt",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
